--- a/themes/riipen/sass/_organization.scss
+++ b/themes/riipen/sass/_organization.scss
@@ -1,5 +1,6 @@
 .organization-section-1{
-height: 242px;
+        height: 242px;
+        padding: .5em 1em;
         background-image: url('../../images/organizationheader.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
