--- a/themes/riipen/sass/_talent.scss
+++ b/themes/riipen/sass/_talent.scss
@@ -1,5 +1,6 @@
 .talent-section-1{
-    height: 242px;
+        height: 242px;
+        padding: .5em 1em;
         background-image: url('../../images/talentheader.jpg');
         background-size: cover;
         background-repeat: no-repeat;
